--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
     <title>Meu Portifólio</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://eduardocsantos10/testes-dev/style.css" rel="stylesheet" />
+    <link href="https://eduardocsantos10.github.io/testes-dev/style.css" rel="stylesheet" />
     
 </head>
 <body>
